derive/tests/snapshots/referenced_row_methods/Server/get_all_servers.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `server` table.
    pub fn get_all_servers<'a>(&'a self) -> impl Iterator<Item = Server> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().server().iter()
    }
}
