derive/tests/snapshots/referenced_row_methods/Server/get_servers_by_season_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Server` iterator that contains all rows in the `server` table whose value matches the value from the single-column btree index on the `season_id` column.
    pub fn get_servers_by_season_id<'a>(
        &'a self,
        season_id: impl Into<SeasonId>,
    ) -> impl Iterator<Item = Server> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().server().season_id().filter(season_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Server` iterator that contains all rows in the `server` table whose value matches the value from the single-column btree index on the `season_id` column.
    pub fn get_servers_by_season_id<'a>(
        &'a self,
        season_id: impl Into<SeasonId>,
    ) -> impl Iterator<Item = Server> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().server().season_id().filter(season_id.into().value())
    }
}
